--- a/list-animated/index.html
+++ b/list-animated/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ListAnimated</title>
-  <base href="=https://allandozi.github.io/Allandozi/list.app/">
+  <base href="='https://allandozi.github.io/Allandozi/list.app/'">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.1c309de444f9c5d40bdc.css"></head>
